--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,14 +56,14 @@ jobs:
         - name: Login to DockerHub
           uses: docker/login-action@v3
           with:
-            username: $DOCKER_USERNAME
-            password: $DOCKER_TOKEN
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_TOKEN }}
         - name: Build and push backend Docker image
           run: |
-              docker build -t $DOCKER_USERNAME/backend-image:${{ github.run_number }} .
-              docker push $DOCKER_USERNAME/backend-image:${{ github.run_number }}
-              docker tag $DOCKER_USERNAME/backend-image:${{ github.run_number }} ${{ secrets.DOCKER_USERNAME }}/backend-image:latest
-              docker push $DOCKER_USERNAME/backend-image:latest
+              docker build -t ${{ secrets.DOCKER_USERNAME }}/backend-image:${{ github.run_number }} .
+              docker push ${{ secrets.DOCKER_USERNAME }}/backend-image:${{ github.run_number }}
+              docker tag ${{ secrets.DOCKER_USERNAME }}/backend-image:${{ github.run_number }} ${{ secrets.DOCKER_USERNAME }}/backend-image:latest
+              docker push ${{ secrets.DOCKER_USERNAME }}/backend-image:latest
 
         - name: Install Docker on EC2
           run: |
