--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ env:
     EC2_HOST: ${{ secrets.EC2_HOST }}
     DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
     DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
-    SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+    # SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
 jobs:
     build:
@@ -41,7 +41,6 @@ jobs:
         - name: Upload to S3
           run: |
             aws --version
-            ls -la
             aws s3 sync frontend/build s3://$AWS_S3_BUCKET/ --recursive --acl public-read
 
     build_and_deploy_backend:
