--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,6 @@ env:
     EC2_HOST: ${{ secrets.EC2_HOST }}
     DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
     DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
-    # SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
 jobs:
     build:
@@ -40,7 +39,7 @@ jobs:
       steps:
         - name: Upload to S3
           run: |
-            aws s3 sync frontend/build s3://$AWS_S3_BUCKET/ --recursive --acl public-read
+            aws s3 sync frontend/build s3://$AWS_S3_BUCKET/ --acl public-read
 
     build_and_deploy_backend:
         name: Build and Deploy Backend
